Hyperlink DOIs against preferred resolver

--- a/Codes/GIFMod User's Manual/GIFMod.bib
+++ b/Codes/GIFMod User's Manual/GIFMod.bib
@@ -550,7 +550,7 @@ journal = {Water Resources Research},
 volume = {17},
 number = {6},
 issn = {1944-7973},
-url = {http://dx.doi.org/10.1029/WR017i006p01657},
+url = {https://doi.org/10.1029/WR017i006p01657},
 doi = {10.1029/WR017i006p01657},
 pages = {1657--1664},
 keywords = {Hydrology},
